tests/baselines/reference/local/unusedSwitchStatment.errors.txt
tests/cases/compiler/unusedSwitchStatment.ts(4,13): error TS6133: 'x' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(7,15): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(10,13): error TS6133: 'z' is declared but never used.
tests/cases/compiler/unusedSwitchStatment.ts(18,9): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.


==== tests/cases/compiler/unusedSwitchStatment.ts (4 errors) ====
    
    switch (1) {
        case 0:
            let x;
                ~
!!! error TS6133: 'x' is declared but never used.
            break;
        case 1:
            const c = 1;
                  ~
!!! error TS6133: 'c' is declared but never used.
            break;
        default:
            let z = 2;
                ~
!!! error TS6133: 'z' is declared but never used.
    }
    
    
    switch (2) {
        case 0:
            let x;
        case 1:
            x++;
            ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
    }